# intern_work_logiscareers

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SYSTEM_STARTUP_LOG.md  compare_endpoint_response.json  main.py  pyproject.toml  requirements.txt
api/: dependencies.py  main.py
api/routes/: __init__.py  cv.py  evaluation.py  health.py
application/: __init__.py  bootstrap.py  cv_service.py  dependencies.py  evaluation_service.py  exceptions.py  logging_config.py
config/: __init__.py  config_validator.py  env.py  logging_config.py  scoring_config.py  settings.py  thresholds.yaml
core/rules/: hard_rejection_engine.py
core/schemas/: candidate.py  evaluation_response.py  job.py
core/scoring/: advanced_scorer.py  comprehensive_scorer.py  confidence_calculator.py  contextual_adjuster.py  models.py  skills_scorer.py
core/scoring/strategies/: __init__.py  base.py  cv_analysis_strategy.py  education_strategy.py  experience_strategy.py  personal_details_strategy.py  salary_strategy.py  skills_strategy.py
data/golden_cvs/: compare_endpoint_response.json  golden_cv_1_logistics_manager.txt  golden_cv_2_software_engineer.txt  golden_cv_3_data_scientist.txt
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_QUICK_REFERENCE.md  CHANGELOG.md  CLEAN_ARCHITECTURE.md  QUICKSTART.md
ml/: cv_candidate_mapper.py  cv_parser.py  semantic_similarity.py
ml/parser/: __init__.py  cv_pipeline.py  education_extractor.py  entity_extractor.py  experience_extractor.py  patterns.py  pipeline.py  section_segmenter.py  skill_normalizer.py  text_cleaner.py
tests/: test_api.py  test_authentication.py
tests/api_endpoint_compare/: test_compare_endpoint.py  test_endpoint_implementation.py
tests/integration/: test_golden_cvs.py
tests/property/: __init__.py  test_scoring_properties.py
tests/unit/scoring/: __init__.py  test_cv_analysis_strategy.py  test_education_strategy.py  test_experience_strategy.py  test_personal_details_strategy.py  test_salary_strategy.py  test_skills_strategy.py
utils/: __init__.py  cv_parser_utils.py
